# callback-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_app.sh
src/: api.py  auth.py  config.py  exact_oauth.py  main.py  usersdb.py
src/routes/: api.py  exact.py
src/schemas/: google_oauth.py  user.py
