[tool.poetry]
name = "exactwrapper"
version = "0.1.0"
description = ""
authors = ["e.wilts <e.wilts@ncim.nl>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
rich = "^13.3.4"
ruff = "^0.0.263"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
python-multipart = "^0.0.6"
fastapi-users = {extras = ["beanie", "oauth"], version = "^11.0.0"}
xmltodict = "^0.13.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
